Simplify generated image data URL parsing